--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "sqlite-parser",
+  "name": "@jhwong/sqlite-parser",
   "description": "JavaScript implentation of SQLite 3 query parser",
   "author": "Code School (http://codeschool.com)",
-  "version": "1.0.1",
+  "version": "0.0.1",
   "contributors": [
-    "Nick Wronski <nick@javascript.com>"
+    "Nick Wronski <nick@javascript.com>",
+    "jhwong <123@jhwong.cn>"
   ],
   "keywords": [
     "sql",
@@ -41,9 +42,9 @@
     "CHANGELOG.md",
     "README.md"
   ],
-  "repository": "git@github.com:codeschool/sqlite-parser.git",
+  "repository": "https://github.com/jinhuiWong/sqlite-parser.git",
   "bugs": {
-    "url": "https://github.com/codeschool/sqlite-parser/issues"
+    "url": "https://github.com/jinhuiWong/sqlite-parser/issues"
   },
   "devDependencies": {
     "babel-core": "^6.17.0",
@@ -70,7 +71,7 @@
     "load-grunt-tasks": "^3.5.2",
     "lodash": "^4.16.2",
     "mocha": "^3.1.0",
-    "pegjs": "git+https://github.com/nwronski/pegjs.git#master",
+    "@jhwong/pegjs": "^0.0.1",
     "prettyjson": "^1.1.3"
   },
   "dependencies": {}
